Fix linux menu checkmark icon overlap (#5343)
Fix linux menu checkmark icon overlap

fix: #5340

--- a/scss/linux/_menu.scss
+++ b/scss/linux/_menu.scss
@@ -1,3 +1,10 @@
+menu,
+menuitem {
+	.menu-iconic-icon[src] {
+		-moz-default-appearance: none;
+	}
+}
+
 @each $cls, $icon in $menu-icons {
 	.zotero-menuitem-#{$cls} {
 		// If icon starts with "light-dark:", use light and dark icon
